# crawler

./: .env.example  .gitignore  Dockerfile  README.md  crawler.py  pyproject.toml  requirements.txt  sonar-project.properties  test_crawler.py
.github/workflows/: build.yml  deploy.yml
kustomize-crawler/: crawler-cronjob.yaml  crawler-ns.yaml  kustomization.yaml
