[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["t106362512 <t106362512@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
requests-html = "^0.10.0"
mysql-connector-python = "^8.0.29"
beautifulsoup4 = "^4.11.1"
GoogleNews = "^1.6.3"
requests = {extras = ["security"], version = "^2.28.0"}

[tool.poetry.dev-dependencies]
coverage = "^6.4.1"
pylint = "^2.14.1"
unittest-xml-reporting = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
